# hexwar

./: .gitignore  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  HEURISTIC_TUNING_LOG.md  NOTES.md  README.md  autonomous_log.md  balance_state.json  copper_pass_d10_game.json  copper_pass_d8_game.json  designer_history.jsonl  generate_rulebook.py  heartbeat.sh  heartbeat_note.txt
board_sets/: old-lion.json  orc-fey.json  the_necromancer.json  the_necromancer_ruleset.json  the_orcs.json
board_sets/d7_firstarrow_seeds/: bold-ram.json  bold-wall.json  copper-pass.json  dim-staff.json  first-arrow.json  prime-flame.json  west-bow.json
board_sets/d7_phoenix_seeds/: amber-shield.json  cold-gate.json  deep-helm.json  deep-wall.json  jade-axe.json  jade-dusk.json  last-elk.json  lone-star.json  opal-anvil.json  prime-bear.json  pure-haze.json  soft-forge.json  twin-root.json  west-bow.json  west-lake.json
board_sets/d7_seeds/: dim-bridge-base.json  dim-bridge-v1.json  dim-bridge-v2.json  dim-bridge-v3.json  dim-bridge-v4.json  high-mist-base.json  high-mist-v1.json  high-mist-v2.json  high-mist-v3.json  high-mist-v4.json  high-mist-v5.json  high-mist-v6.json  high-mist-v7.json  high-mist-v8.json  steel-wolf-base.json  steel-wolf-v2.json  steel-wolf-v3.json  steel-wolf-v4.json
board_sets/fey_seeds/: eFey.json  fey-base.json  fey-bishops.json  fey-dancers.json  fey-heavy.json  fey-knights.json  fey-rangers.json  fey-scouts.json  fey-triton.json  fey-twin-warp.json  still-hammer.json
board_sets/fey_warper_seeds/: fey-base-efey.json  fey-warper-for-courser.json  fey-warper-for-crab.json  fey-warper-for-frog.json  fey-warper-for-guard.json  fey-warper-for-ranger.json  fey-warper-for-triskelion.json  fey-warper-x2-frog-courser.json  fey-warper-x2-ranger-crab.json  fey-warper-x2-triskelion-guard.json
board_sets/fine_fern_eval/: fine-fern-12.json
board_sets/jumphand_eval/: jumphand-06.json
board_sets/jumphand_mixed_seeds/: alter-jumphand-2.json  lesser-jumphand-2.json
board_sets/lower_ring_seeds/: lower_ring_base.json  lower_ring_compact.json  lower_ring_king_forward.json  lower_ring_swap_dancers.json  lower_ring_swap_heavy.json  lower_ring_swap_lancers.json  lower_ring_wide.json
board_sets/old_lion_eval/: old-lion.json
board_sets/orc_seeds/: orcs_base.json  orcs_bishop.json  orcs_chariot.json  orcs_coursers.json  orcs_dancers.json  orcs_flankers.json  orcs_flankers_dancers.json  orcs_ghost.json  orcs_guards.json  orcs_guards_coursers.json  orcs_k1.json  orcs_k1_bishop.json  orcs_k2.json  orcs_k4.json  orcs_k4_rook.json  orcs_pawns.json  orcs_rook.json  orcs_shifter.json  orcs_striders.json
board_sets/stone_wolf_eval/: stone-wolf-06.json
docs/: ARCHITECTURE_V2.md  CONVERSATION_LOG.md  EVOLUTION_SYSTEM.md  FINDINGS_DEC31_TEMPLATE_AWARE.md  HEXWAR_Algorithmic_Specification_v1.1.docx  HEXWAR_Rules_Specification.docx  HEXWAR_WORKING_NOTES.md  PIECE_MOBILITY_ANALYSIS.md  PIECE_VALUES.md  SESSION_NOTES.md  THREE_TEAM_BALANCE_ARCHITECTURE.md
hexwar/: ai.py  autoscale.py  balance.py  board.py  checkpoint.py  evolution.py  game.py  game_record.py  namegen.py  pieces.py  runner.py  seeds.py  tournament.py
hexwar-cli/: Cargo.toml
hexwar-cli/src/: benchmark.rs  evolve.rs  main.rs  match_cmd.rs  server.rs
hexwar-cli/tests/: integration_test.rs
hexwar-core/: Cargo.toml
hexwar-core/src/: ai.rs  board.rs  eval.rs  game.rs  lib.rs  pieces.rs  ruleset.rs
hexwar-core/src/heuristics/: zodiac_8.rs
hexwar-evolve/: Cargo.toml
hexwar-evolve/src/: crossover.rs  lib.rs  mutation.rs  naming.rs  selection.rs
hexwar-gpu/: Cargo.toml
hexwar-gpu/src/: compact.rs  kernels.rs  lib.rs
hexwar-mcts/: Cargo.toml
hexwar-mcts/benches/: compare_players.rs
hexwar-mcts/src/: lib.rs  rollout.rs  search.rs  tree.rs
hexwar-server/: Cargo.toml
hexwar-server/examples/: run_server.rs
hexwar-server/src/: lib.rs  state.rs
hexwar-server/src/routes/: board.rs  champions.rs  designer.rs  game.rs  mod.rs  pieces.rs  playback.rs  rulesets.rs  status.rs
hexwar-server/tests/: api_tests.rs
hexwar-tournament/: Cargo.toml
hexwar-tournament/src/: config.rs  fitness.rs  game_runner.rs  lib.rs  match_play.rs  tournament.rs
hexwar/visualizer/: designer.html  index.html  player.html  server.py
hexwar_core/: Cargo.toml
hexwar_core/src/: lib.rs
published/: copper-pass-d10-game.json  copper-pass.json
tests/: test_board.py  test_evolution.py  test_game.py  test_game_record.py  test_integration.py  test_performance.py  test_phoenix_rebirth.py  test_pieces.py  test_specials.py  test_template.py
