[workspace]
resolver = "2"
members = [
    "hexwar-core",
    "hexwar-gpu",
    "hexwar-evolve",
    "hexwar-tournament",
    "hexwar-mcts",
    "hexwar-server",
    "hexwar-cli",
    "hexwar-nn",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["HEXWAR Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Random
rand = "0.8"
rand_chacha = "0.3"

# Performance
rustc-hash = "2.0"
rayon = "1.10"

# Async/HTTP (for server)
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
