[package]
name = "hexwar-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hexwar"
path = "src/main.rs"

[dependencies]
hexwar-core = { path = "../hexwar-core" }
hexwar-gpu = { path = "../hexwar-gpu" }
hexwar-evolve = { path = "../hexwar-evolve" }
hexwar-tournament = { path = "../hexwar-tournament" }
hexwar-mcts = { path = "../hexwar-mcts" }
hexwar-server = { path = "../hexwar-server" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
