[package]
name = "hexwar-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rustc-hash = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
