[package]
name = "hexwar-gpu"
version.workspace = true
edition.workspace = true

[dependencies]
hexwar-core = { path = "../hexwar-core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }

# CUDA bindings - cudarc provides safe CUDA abstractions
cudarc = { version = "0.12", features = ["std", "driver", "nvrtc", "cuda-12040"] }

# For compact data structures
bytemuck = { version = "1.14", features = ["derive"] }
