[package]
name = "hexwar-mcts"
version.workspace = true
edition.workspace = true

[dependencies]
hexwar-core = { path = "../hexwar-core" }
hexwar-gpu = { path = "../hexwar-gpu" }
rand = { workspace = true }
rand_chacha = { workspace = true }

[features]
default = []
parallel = ["rayon"]

[dependencies.rayon]
version = "1.10"
optional = true

[[bench]]
name = "compare_players"
harness = false
