[package]
name = "hexwar-server"
version.workspace = true
edition.workspace = true

[dependencies]
hexwar-core = { path = "../hexwar-core" }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "run_server"
