[package]
name = "hexwar_core"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "hexwar_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rustc-hash = "2.0"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
